--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
 						<img data-project="p4" class="showcase__thumb" src="content/project_placeholder_thumb.jpg">
 						<img data-project="p5" class="showcase__thumb" src="content/project_placeholder_thumb.jpg">
 
-						<!-- blank template
+						 blank template
 						<div data-project="p5" class="showcase__thumb  showcase__thumb--blank">&nbsp;</div>
-						 -->
+						
 
 					</div>
 
