--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 					<div class="showcase__thumbnails-wrapper">
 
 						<!-- normal -->
-						<img data-project="p1" class="showcase__thumb  showcase__thumb--first  showcase__thumb--active" src="content/project01_thumb.jpg">
+						<img data-project="p1" class="showcase__thumb  showcase__thumb--first  showcase__thumb--active" src="content/project_placeholder_thumb.jpg">
 						<img data-project="p2" class="showcase__thumb" src="content/project_placeholder_thumb.jpg">
 						<img data-project="p3" class="showcase__thumb" src="content/project_placeholder_thumb.jpg">
 						<img data-project="p4" class="showcase__thumb" src="content/project_placeholder_thumb.jpg">
