--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 						<div data-project="p3" class="showcase__stage">
 							<div class="showcase__slider">
 								<ul class="rslides">
-									<li><img src="content/optsantedz.PNG"></li>
+									<li><img src="content/optsantedz.jpg"></li>
 								</ul>
 							</div>
 							<div class="showcase__infos-wrapper">
@@ -531,7 +531,7 @@
 						<div data-project="p4" class="showcase__stage">
 							<div class="showcase__slider">
 								<ul class="rslides">
-									<li><img src="content/schoollium.PNG"></li>
+									<li><img src="content/schoollium.jpg"></li>
 								</ul>
 							</div>
 							<div class="showcase__infos-wrapper">
