--- a/index.html
+++ b/index.html
@@ -395,14 +395,8 @@
 								<ul class="rslides">
 
 									<li>
-										<a href="content/project01_slide01.jpg" target="_blank">
-											<img src="content/project01_slide01.jpg">
-										</a>
-									</li>
-
-									<li>
-										<a href="content/project01_slide02.jpg" target="_blank">
-											<img src="content/project01_slide02.jpg">
+										<a href="content/iotchain.jpg" target="_blank">
+											<img src="content/iotchain.jpg">
 										</a>
 									</li>
 
@@ -494,7 +488,7 @@
 						<div data-project="p3" class="showcase__stage">
 							<div class="showcase__slider">
 								<ul class="rslides">
-									<li><img src="content/optsantedz.jpg"></li>
+									<li><img src="content/optsantedz.png"></li>
 								</ul>
 							</div>
 							<div class="showcase__infos-wrapper">
